Changed the handling for hardware-caused terminal signals: * No longer send a SIGKILL when a page fault occurred, there was no   signal handler, and the debugger told us to continue as usual. Instead   we send a SIGSEGV. Instead in handle_signal() when not in the main   thread and there's no handler for the signal, we first send the main   thread a SIGKILL before letting the thread die.   So in cases where the main thread caused an unhandled page fault, the   team will die from the SIGSEGV, now. This fixes bug #2773. * For the other hardware-caused signals we do now do the same as in case   of page faults, i.e. we first check whether the thread has a handler   for the signal in question. If so, we don't notify the debugger, but   send the signal right away. * B_GENERAL_PROTECTION_FAULT is translated to SIGILL now. Seems better   than SIGKILL.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27757 a95241bf-73f2-0310-859d-f6bbb57e9c96